@@ -11,7 +11,9 @@ documents those changes that are of interest to users and administrators.
  -- Optimize resource allocation logic for --spread-job job option.
  -- Modify cpu_bind and mem_bind map and mask options to accept a repetition
     count to better support large task count. For example:
-    "mask_mem:0x0f*2,0xf0*2" is equivalent to "mask_mem:0x0f,0x0f,0xf0,0xf0"
+    "mask_mem:0x0f*2,0xf0*2" is equivalent to "mask_mem:0x0f,0x0f,0xf0,0xf0".
+ -- Add suppoprt for --mem_bind=prefer option to prefer, but not restrict memory
+    use to the identified NUMA node.
 
 * Changes in Slurm 17.02.0pre2
 ==============================
